--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "name": "Stelios Magalios"
   },
   "scripts": {
-    "dev": "nodemon src/index.ts",
+    "dev:prisma": "dotenv -e .env.local -- prisma",
+    "dev": "dotenv -e .env.local -- nodemon src/index.ts",
     "build": "tsc",
     "migrate": "prisma migrate deploy",
     "start": "node dist/index.js",
