--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -11,4 +11,4 @@ services:
     env_file:
       - .env.local
     volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      - ./pgdata-dev:/var/lib/postgresql/data
