--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,5 @@
 version: '3.8'
 
-# WARNING: INCOMPLETE FILE!!! DO NOT USE!!!
 services:
   database:
     container_name: 'database'
@@ -10,3 +9,21 @@ services:
       - 5432:5432
     env_file:
       - .env
+    volumes:
+      - pgdata-prod:/var/lib/postgresql/data
+  
+  # TODO: wait-for
+  server:
+    container_name: 'server'
+    build: 
+      context: .
+      dockerfile: Dockerfile
+    ports:
+      - 4000:4000
+    depends_on:
+      - database
+    env_file:
+      - .env
+
+volumes:
+  pgdata-prod: {}
