--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "zod": "^3.19.1"
   }
 }
