moved server to it's own folder and added client code

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
   server:
     container_name: 'server'
     build: 
-      context: .
+      context: ./server
       dockerfile: Dockerfile
     ports:
       - 4000:4000
