--- a/server/.env.local
+++ b/server/.env.local
@@ -8,7 +8,7 @@ POSTGRES_USER="admin"
 POSTGRES_PASSWORD="admin"
 POSTGRES_DB="database"
 
-DATABASE_HOST="localhost"
+DATABASE_HOST="database"
 DATABASE_PORT="5432"
 
 DATABASE_URL="postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${DATABASE_HOST}:${DATABASE_PORT}/${POSTGRES_DB}?schema=public"
