--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "postinstall": "prisma generate"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.12",
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.9",
     "nodemon": "^2.0.20",
@@ -26,6 +27,7 @@
   },
   "dependencies": {
     "@prisma/client": "^4.5.0",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
     "zod": "^3.19.1"
   }
