--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -25,14 +25,14 @@ services:
     env_file:
       - ./server/.env.local
   
-  # client:
-  #   container_name: 'client'
-  #   build:
-  #     context: ./client
-  #     dockerfile: Dockerfile
-  #   ports:
-  #     - 3000:3000
-  #   depends_on:
-  #     - server
+  client:
+    container_name: 'client'
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    ports:
+      - 80:80
+    depends_on:
+      - server
 
     
